--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "New logger initiative",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "nodemon --exec ./node_modules/.bin/babel-node ./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,25 @@
   "bugs": {
     "url": "https://github.com/anditakaesar/akae-logger/issues"
   },
-  "homepage": "https://github.com/anditakaesar/akae-logger#readme"
+  "homepage": "https://github.com/anditakaesar/akae-logger#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "express": "^4.17.1",
+    "helmet": "^4.4.1",
+    "sequelize": "^6.6.2",
+    "sqlite3": "^5.0.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.15",
+    "@babel/node": "^7.13.13",
+    "@babel/preset-env": "^7.13.15",
+    "nodemon": "^2.0.7"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  }
 }
